Implemented spriteSheet icons commit frontend work

--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -833,6 +833,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -897,6 +901,11 @@ video {
   display: none;
 }
 
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -933,11 +942,6 @@ video {
   height: 100vh;
 }
 
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
 .max-h-80 {
   max-height: 20rem;
 }
@@ -956,11 +960,6 @@ video {
 
 .max-h-\[90\%\] {
   max-height: 90%;
-}
-
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
 }
 
 .\!w-11\/12 {
@@ -1039,16 +1038,12 @@ video {
   width: 14rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
 .w-72 {
   width: 18rem;
 }
 
-.w-8 {
-  width: 2rem;
+.w-80 {
+  width: 20rem;
 }
 
 .w-\[10\%\] {
@@ -1102,10 +1097,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-2 {
-  width: 0.5rem;
 }
 
 .max-w-72 {
@@ -1369,6 +1360,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1397,6 +1392,10 @@ video {
   border-width: 1px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-b-0 {
   border-bottom-width: 0px;
 }
@@ -1411,6 +1410,10 @@ video {
 
 .border-l-0 {
   border-left-width: 0px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-r-0 {
@@ -1477,6 +1480,10 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.border-vls\/40 {
+  border-color: rgb(139 145 151 / 0.4);
+}
+
 .border-vls\/80 {
   border-color: rgb(139 145 151 / 0.8);
 }
@@ -1502,6 +1509,11 @@ video {
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.bg-\[\#fafafa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity, 1));
 }
 
 .bg-black {
@@ -1554,14 +1566,19 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-vlp3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vls3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vls2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-10 {
@@ -2768,15 +2785,12 @@ input::-webkit-inner-spin-button {
   justify-content: center;
   border-radius: 0.375rem;
   border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
+  border-color: rgb(139 145 151 / 0.4);
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity, 1));
 }
 
 .toggler:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
@@ -3793,6 +3807,15 @@ input[type='radio']:checked {
   border-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-vds3neu700:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-vls\/40:is(.dark *) {
+  border-color: rgb(139 145 151 / 0.4);
+}
+
 .dark\:border-vred-300:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
@@ -3846,6 +3869,14 @@ input[type='radio']:checked {
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-vdp\/90:is(.dark *) {
+  background-color: rgb(24 24 27 / 0.9);
+}
+
+.dark\:bg-vdp\/80:is(.dark *) {
+  background-color: rgb(24 24 27 / 0.8);
 }
 
 .dark\:text-neutral-400:is(.dark *) {
