added items section as a slide on - initial state is true beware set in itemEditor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,24 +173,36 @@ input::-webkit-inner-spin-button {
   border-bottom-right-radius: 0.375rem;
 }
 .border-hover-ring-efect {
-  @apply cursor-default rounded-md transition duration-100;
-  @apply hover:shadow-lg hover:ring-1 hover:ring-vls2/80 dark:hover:ring-vds3light;
+  @apply transition duration-100 rounded-md cursor-default ring-1 ring-vls/30;
+  @apply hover:shadow-sm hover:ring-1 hover:ring-vls2/50 dark:hover:ring-vds3light;
 }
 .table-container {
   @apply mb-12 overflow-y-auto;
 }
 .table-head-style {
-  @apply sticky top-0 z-10 rounded bg-vls2 text-base font-medium text-vlp;
+  @apply sticky top-0 z-10 text-base font-medium rounded bg-vls2 text-vlp;
   @apply dark:bg-vdp dark:text-vds;
 }
 .table-head-works {
-  @apply sticky top-0 rounded bg-vls2 text-base font-medium text-vlp dark:bg-zinc-900 dark:text-vds;
+  @apply sticky top-0 text-base font-medium rounded bg-vls2 text-vlp dark:bg-zinc-900 dark:text-vds;
 }
 .table-body-style {
   @apply bg-vlp text-vls2 hover:text-vls3;
   @apply dark:bg-vds3neu700 dark:text-vds;
 }
 /* TABLE INPUTS */
+.table-input-standard {
+  @apply px-1 transition duration-300 bg-white rounded-md border-vls/40 placeholder-vls text-vls;
+  @apply hover:border hover:text-vls3 hover:placeholder-vls2/80;
+  @apply focus:border focus:placeholder-vls2/80 focus:border-vls focus:outline-none focus:text-vls3;
+}
+
+.dark .table-input-standard {
+  @apply px-1 transition duration-300 rounded-md border-vds bg-vds3neu700 placeholder-vds/50 text-vds;
+  @apply hover:border-vds hover:text-vds hover:placeholder-vds;
+  @apply focus:border-vds focus:placeholder-vds focus:outline-none focus:text-vds;
+}
+
 .table-edit-input-style {
   @apply w-full rounded border border-transparent bg-vlp2/70 px-1 py-0.5 text-vls2/60 transition duration-100;
   @apply hover:border-vls2 hover:bg-vlp hover:text-vls2;
@@ -206,7 +218,7 @@ input::-webkit-inner-spin-button {
 }
 
 .table-interaction-icon-blue {
-  @apply rounded-full text-vls2 transition duration-100;
+  @apply transition duration-100 rounded-full text-vls2;
   @apply hover:bg-vlp2/60 hover:text-vla;
   @apply dark:text-vds;
   @apply dark:hover:bg-vlp2/20 dark:hover:text-blue-400;
@@ -221,7 +233,7 @@ input::-webkit-inner-spin-button {
   justify-content: center;
 }
 .table-interaction-icon-red {
-  @apply rounded-full text-vls2 transition duration-100;
+  @apply transition duration-100 rounded-full text-vls2;
   @apply hover:bg-vlp2/60 hover:text-vda2;
   @apply dark:text-vds;
   @apply dark:hover:bg-vlp2/20 dark:hover:text-vda2;
@@ -237,11 +249,11 @@ input::-webkit-inner-spin-button {
 }
 /* Buttons */
 .butt-style {
-  @apply flex items-center rounded-md border border-transparent bg-vls2 p-2 text-sm font-medium text-vlp duration-500;
+  @apply flex items-center p-2 text-sm font-medium duration-500 border border-transparent rounded-md bg-vls2 text-vlp;
   @apply hover:border-vla hover:bg-vls3 hover:text-vla active:scale-95;
 }
 .dark .butt-style {
-  @apply flex items-center rounded-md border border-vds2 bg-vdp p-2 text-sm font-medium text-vds3light duration-500;
+  @apply flex items-center p-2 text-sm font-medium duration-500 border rounded-md border-vds2 bg-vdp text-vds3light;
   @apply hover:border-vda hover:text-vda active:scale-95;
 }
 .icon {
@@ -266,7 +278,7 @@ input::-webkit-inner-spin-button {
 }
 /* MARK: TAB BUTTONS */
 .tab-button {
-  @apply transform my-4 rounded-md flex text-vls2 transition-all duration-300 ease-in-out;
+  @apply flex my-4 transition-all duration-300 ease-in-out transform rounded-md text-vls2;
   @apply hover:bg-vlp2 hover:text-vls3;
   @apply active:scale-90;
 }
@@ -276,7 +288,7 @@ input::-webkit-inner-spin-button {
 }
 /* Dark tab buttons */
 .dark .tab-button {
-  @apply transform my-4 flex items-baseline text-vds3light transition duration-300 ease-in-out;
+  @apply flex items-baseline my-4 transition duration-300 ease-in-out transform text-vds3light;
   @apply hover:bg-vdp3 hover:text-vda;
 }
 .dark .tab-button-active {
@@ -285,11 +297,11 @@ input::-webkit-inner-spin-button {
 }
 /* MARK: Tab Toggler Tabs */
 .toggler {
-  @apply relative inline-grid h-10 w-full select-none grid-cols-2 items-center justify-center rounded-md border border-vls/40 text-vdp2;
+  @apply relative inline-grid items-center justify-center w-full h-10 grid-cols-2 border rounded-md select-none border-vls/40 text-vdp2;
   @apply dark:bg-vdp2 dark:text-vds;
 }
 .toggler-handle-bg {
-  @apply absolute inset-0 z-10 h-full w-1/2 duration-500 ease-out; /* Align within parent */
+  @apply absolute inset-0 z-10 w-1/2 h-full duration-500 ease-out; /* Align within parent */
 }
 .toggler-handle-inner {
   @apply z-10 !h-full !w-full rounded-md bg-vls2 shadow-sm dark:bg-zinc-900;
@@ -300,7 +312,7 @@ input::-webkit-inner-spin-button {
 }
 
 .toggler-inactive {
-  @apply text-vls2 transition duration-500 ease-out hover:text-vls3 hover:underline;
+  @apply transition duration-500 ease-out text-vls2 hover:text-vls3 hover:underline;
   @apply dark:text-vds dark:hover:text-vda;
 }
 
@@ -311,29 +323,29 @@ input::-webkit-inner-spin-button {
 /* Togglers Ends */
 /* MARK:Search Input*/
 .srch-style {
-  @apply flex rounded-md border border-transparent bg-vls2 p-2 text-sm font-medium text-vlp2 transition duration-500 placeholder:text-vlp2;
+  @apply flex p-2 text-sm font-medium transition duration-500 border border-transparent rounded-md bg-vls2 text-vlp2 placeholder:text-vlp2;
   @apply hover:border-vla hover:bg-vls3 hover:text-vlp;
   @apply focus:border-vla focus:bg-vls3 focus:text-vlp focus:outline-none;
 }
 .dark .srch-style {
-  @apply border-transparent bg-vdp p-2 text-sm font-medium text-vds transition duration-500 placeholder:text-vds3light;
+  @apply p-2 text-sm font-medium transition duration-500 border-transparent bg-vdp text-vds placeholder:text-vds3light;
   @apply hover:border-vda hover:text-vds hover:placeholder-vds;
   @apply focus:border-vda focus:text-vds focus:placeholder-vds focus:outline-none;
 }
 
 /* MARK: MODALS */
 .modal-input-style {
-  @apply rounded-md bg-blue-50 p-2 text-vls2 placeholder-vls ring-1 ring-vls2/30 transition-all duration-500;
+  @apply p-2 transition-all duration-500 rounded-md bg-blue-50 text-vls2 placeholder-vls ring-1 ring-vls2/30;
   @apply hover:bg-blue-100 hover:placeholder-vls2/80 hover:ring-vls2/70;
   @apply focus:bg-blue-100 focus:placeholder-vls2/80 focus:outline-none focus:ring-vls2/70;
 }
 .dark .modal-input-style {
-  @apply rounded-md bg-vds3neu700 p-2 text-vds placeholder-vds3light ring-1 ring-transparent transition duration-500;
+  @apply p-2 transition duration-500 rounded-md bg-vds3neu700 text-vds placeholder-vds3light ring-1 ring-transparent;
   @apply hover:bg-vds2 hover:text-vds hover:placeholder-vds;
   @apply focus:bg-vds2 focus:text-vds focus:placeholder-vds focus:ring-vds3light;
 }
 .outter-modal-overlay-blur-fixed {
-  @apply fixed inset-0 h-full w-full overflow-y-auto bg-gray-800/50 backdrop-blur-sm;
+  @apply fixed inset-0 w-full h-full overflow-y-auto bg-gray-800/50 backdrop-blur-sm;
 }
 .dark .modal-title {
   @apply text-2xl font-medium tracking-tighter text-vds;
@@ -343,42 +355,42 @@ input::-webkit-inner-spin-button {
 }
 /* Modal Buttons */
 .modal-dropdown {
-  @apply mb-4 w-full rounded-md border border-vls p-2 text-vls transition duration-300;
+  @apply w-full p-2 mb-4 transition duration-300 border rounded-md border-vls text-vls;
   @apply hover:border-vls2 hover:text-vls2;
 
   @apply dark:border-vds3light dark:text-vds3light;
   @apply dark:hover:border-vds dark:hover:text-vds;
 }
 .inner-modal-dropdown-open {
-  @apply flex justify-center border border-vls2 p-2 text-vls2 transition duration-300 dark:border-vds dark:text-vds;
+  @apply flex justify-center p-2 transition duration-300 border border-vls2 text-vls2 dark:border-vds dark:text-vds;
 }
 .modal-btn-prim {
-  @apply rounded-md border bg-vls2 px-2 py-1 text-base text-vlp2 duration-500;
+  @apply px-2 py-1 text-base duration-500 border rounded-md bg-vls2 text-vlp2;
   @apply hover:border-vla hover:bg-vls3 hover:text-vla;
   @apply active:scale-95 active:border-vla;
 }
 .dark .modal-btn-prim {
-  @apply rounded-md border border-transparent bg-vds3neu700 px-2 py-1 text-base text-vlp2 duration-500;
+  @apply px-2 py-1 text-base duration-500 border border-transparent rounded-md bg-vds3neu700 text-vlp2;
   @apply hover:border-vda hover:bg-vds2 hover:text-vda;
   @apply active:scale-95 active:border-vda;
 }
 .modal-btn-sec {
-  @apply rounded-md bg-red-800 px-2 py-1 text-base text-vlp transition duration-300;
+  @apply px-2 py-1 text-base transition duration-300 bg-red-800 rounded-md text-vlp;
   @apply hover:bg-red-700;
   @apply active:scale-95;
 }
 
 .inner-modal-size-positioning-relative {
-  @apply relative top-1/4 mx-auto w-96 text-center;
+  @apply relative mx-auto text-center top-1/4 w-96;
 }
 .modal-bg-and-borders {
-  @apply rounded-md border border-vls2/70 bg-vlp text-vls shadow-lg;
+  @apply border rounded-md shadow-lg border-vls2/70 bg-vlp text-vls;
   @apply dark:border-vds2 dark:bg-vdp;
 }
 
 /* MARK: BORDER CLIPPER for adjusting table body overflowing the header*/
 .border-clipper {
-  --border-clipper: #d3d5d6;
+  --border-clipper: #fafafa;
   box-shadow: 0 -4px 0 0 var(--border-clipper);
 }
 .dark .border-clipper {
@@ -421,15 +433,15 @@ input[type='radio']:checked {
     border-radius: 0.375rem;
   }
   20% {
-    box-shadow: 0 0 2px 2px rgb(83, 207, 110) inset; /* Glow peaks here */
+    box-shadow: 0 0 4px 4px rgba(83, 207, 110, 0.363) inset; /* Glow peaks here */
     border-radius: 0.375rem;
   }
   50% {
-    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.763) inset; /* Intense glow */
+    box-shadow: 0 0 6px 6px rgba(83, 207, 110, 0.644) inset; /* Intense glow */
     border-radius: 0.375rem;
   }
   80% {
-    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.514) inset; /* Start to fade */
+    box-shadow: 0 0 4px 4px rgba(83, 207, 110, 0.308) inset; /* Start to fade */
     border-radius: 0.375rem;
   }
   100% {
@@ -443,15 +455,15 @@ input[type='radio']:checked {
     border-radius: 0.375rem;
   }
   20% {
-    box-shadow: 0 0 2px 2px rgb(254, 127, 118) inset; /* Glow peaks here */
+    box-shadow: 0 0 4px 4px rgba(254, 127, 118, 0.801) inset; /* Glow peaks here */
     border-radius: 0.375rem;
   }
   50% {
-    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.763) inset; /* Intense glow */
+    box-shadow: 0 0 6px 6px rgba(254, 127, 118, 0.555) inset; /* Intense glow */
     border-radius: 0.375rem;
   }
   80% {
-    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.514) inset; /* Start to fade */
+    box-shadow: 0 0 4px 4px rgba(254, 127, 118, 0.356) inset; /* Start to fade */
     border-radius: 0.375rem;
   }
   100% {
@@ -463,7 +475,10 @@ input[type='radio']:checked {
 .add-item-glow {
   animation: glowEffect 300ms ease-in-out;
 }
-.add-item-glow-dark {
+/* .add-item-glow-dark {
+  animation: glowEffectDark 300ms ease-in-out;
+} */
+.dark .add-item-glow {
   animation: glowEffectDark 300ms ease-in-out;
 }
 .terminator {
