--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -825,10 +825,6 @@ video {
   margin-right: 1rem;
 }
 
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
 .mr-6 {
   margin-right: 1.5rem;
 }
@@ -851,10 +847,6 @@ video {
 
 .mt-2\.5 {
   margin-top: 0.625rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -885,12 +877,20 @@ video {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .table {
   display: table;
 }
 
 .grid {
   display: grid;
+}
+
+.inline-grid {
+  display: inline-grid;
 }
 
 .contents {
@@ -901,17 +901,16 @@ video {
   display: none;
 }
 
-.size-6 {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
 .h-0 {
   height: 0px;
 }
 
 .h-1 {
   height: 0.25rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .h-3 {
@@ -924,6 +923,10 @@ video {
 
 .h-6 {
   height: 1.5rem;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-\[18px\] {
@@ -1099,6 +1102,10 @@ video {
   width: 100vw;
 }
 
+.w-2\/4 {
+  width: 50%;
+}
+
 .max-w-72 {
   max-width: 18rem;
 }
@@ -1117,6 +1124,10 @@ video {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -1240,6 +1251,10 @@ video {
   resize: both;
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1308,12 +1323,6 @@ video {
   gap: 2rem;
 }
 
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1346,6 +1355,10 @@ video {
 
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .text-wrap {
@@ -1428,8 +1441,8 @@ video {
   border-top-width: 8px;
 }
 
-.border-dashed {
-  border-style: dashed;
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-gray-100 {
@@ -1444,16 +1457,6 @@ video {
 
 .border-neutral-100\/70 {
   border-color: rgb(245 245 245 / 0.7);
-}
-
-.border-neutral-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 229 229 / var(--tw-border-opacity, 1));
-}
-
-.border-neutral-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
 }
 
 .border-slate-300 {
@@ -1478,6 +1481,11 @@ video {
 .border-vlp {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-vls {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
 }
 
 .border-vls\/40 {
@@ -1566,19 +1574,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vls3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1));
-}
-
 .bg-vls2 {
   --tw-bg-opacity: 1;
   background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-10 {
@@ -1817,10 +1820,6 @@ video {
   font-weight: 600;
 }
 
-.uppercase {
-  text-transform: uppercase;
-}
-
 .capitalize {
   text-transform: capitalize;
 }
@@ -1862,9 +1861,9 @@ video {
   color: rgb(34 197 94 / var(--tw-text-opacity, 1));
 }
 
-.text-neutral-600 {
+.text-neutral-900 {
   --tw-text-opacity: 1;
-  color: rgb(82 82 82 / var(--tw-text-opacity, 1));
+  color: rgb(23 23 23 / var(--tw-text-opacity, 1));
 }
 
 .text-orange-400 {
@@ -1999,6 +1998,11 @@ video {
 
 .outline-vls\/80 {
   outline-color: rgb(139 145 151 / 0.8);
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .grayscale {
@@ -2334,6 +2338,10 @@ input::-webkit-inner-spin-button {
 .border-hover-ring-efect {
   cursor: default;
   border-radius: 0.375rem;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-color: rgb(139 145 151 / 0.3);
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -2342,13 +2350,13 @@ input::-webkit-inner-spin-button {
 }
 
 .border-hover-ring-efect:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-color: rgb(43 52 64 / 0.8);
+  --tw-ring-color: rgb(43 52 64 / 0.5);
 }
 
 .border-hover-ring-efect:hover:is(.dark *) {
@@ -2422,6 +2430,137 @@ input::-webkit-inner-spin-button {
 }
 
 /* TABLE INPUTS */
+
+.table-input-standard {
+  border-radius: 0.375rem;
+  border-color: rgb(139 145 151 / 0.4);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
+}
+
+.table-input-standard::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(139 145 151 / var(--tw-placeholder-opacity, 1));
+}
+
+.table-input-standard::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(139 145 151 / var(--tw-placeholder-opacity, 1));
+}
+
+.table-input-standard {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.table-input-standard:hover {
+  border-width: 1px;
+  --tw-text-opacity: 1;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+}
+
+.table-input-standard:hover::-moz-placeholder {
+  color: rgb(43 52 64 / 0.8);
+}
+
+.table-input-standard:hover::placeholder {
+  color: rgb(43 52 64 / 0.8);
+}
+
+.table-input-standard:focus {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+}
+
+.table-input-standard:focus::-moz-placeholder {
+  color: rgb(43 52 64 / 0.8);
+}
+
+.table-input-standard:focus::placeholder {
+  color: rgb(43 52 64 / 0.8);
+}
+
+.table-input-standard:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.dark .table-input-standard {
+  border-radius: 0.375rem;
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-text-opacity, 1));
+}
+
+.dark .table-input-standard::-moz-placeholder {
+  color: rgb(212 212 212 / 0.5);
+}
+
+.dark .table-input-standard::placeholder {
+  color: rgb(212 212 212 / 0.5);
+}
+
+.dark .table-input-standard {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.dark .table-input-standard:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-text-opacity, 1));
+}
+
+.dark .table-input-standard:hover::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-placeholder-opacity, 1));
+}
+
+.dark .table-input-standard:hover::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-placeholder-opacity, 1));
+}
+
+.dark .table-input-standard:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-text-opacity, 1));
+}
+
+.dark .table-input-standard:focus::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-placeholder-opacity, 1));
+}
+
+.dark .table-input-standard:focus::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-placeholder-opacity, 1));
+}
+
+.dark .table-input-standard:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 
 .table-edit-input-style {
   width: 100%;
@@ -3350,7 +3489,7 @@ input::-webkit-inner-spin-button {
 /* MARK: BORDER CLIPPER for adjusting table body overflowing the header*/
 
 .border-clipper {
-  --border-clipper: #d3d5d6;
+  --border-clipper: #fafafa;
   box-shadow: 0 -4px 0 0 var(--border-clipper);
 }
 
@@ -3400,19 +3539,19 @@ input[type='radio']:checked {
   }
 
   20% {
-    box-shadow: 0 0 2px 2px rgb(83, 207, 110) inset;
+    box-shadow: 0 0 4px 4px rgba(83, 207, 110, 0.363) inset;
     /* Glow peaks here */
     border-radius: 0.375rem;
   }
 
   50% {
-    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.763) inset;
+    box-shadow: 0 0 6px 6px rgba(83, 207, 110, 0.644) inset;
     /* Intense glow */
     border-radius: 0.375rem;
   }
 
   80% {
-    box-shadow: 0 0 2px 2px rgba(83, 207, 110, 0.514) inset;
+    box-shadow: 0 0 4px 4px rgba(83, 207, 110, 0.308) inset;
     /* Start to fade */
     border-radius: 0.375rem;
   }
@@ -3432,19 +3571,19 @@ input[type='radio']:checked {
   }
 
   20% {
-    box-shadow: 0 0 2px 2px rgb(254, 127, 118) inset;
+    box-shadow: 0 0 4px 4px rgba(254, 127, 118, 0.801) inset;
     /* Glow peaks here */
     border-radius: 0.375rem;
   }
 
   50% {
-    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.763) inset;
+    box-shadow: 0 0 6px 6px rgba(254, 127, 118, 0.555) inset;
     /* Intense glow */
     border-radius: 0.375rem;
   }
 
   80% {
-    box-shadow: 0 0 2px 2px rgba(254, 127, 118, 0.514) inset;
+    box-shadow: 0 0 4px 4px rgba(254, 127, 118, 0.356) inset;
     /* Start to fade */
     border-radius: 0.375rem;
   }
@@ -3462,7 +3601,11 @@ input[type='radio']:checked {
   animation: glowEffect 300ms ease-in-out;
 }
 
-.add-item-glow-dark {
+/* .add-item-glow-dark {
+  animation: glowEffectDark 300ms ease-in-out;
+} */
+
+.dark .add-item-glow {
   animation: glowEffectDark 300ms ease-in-out;
 }
 
@@ -3602,11 +3745,6 @@ input[type='radio']:checked {
 .hover\:bg-green-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-neutral-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-red-900:hover {
@@ -3802,9 +3940,17 @@ input[type='radio']:checked {
   border-color: rgb(63 63 70 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-vds\/50:is(.dark *) {
+  border-color: rgb(212 212 212 / 0.5);
+}
+
 .dark\:border-vds2:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-vds2\/70:is(.dark *) {
+  border-color: rgb(82 82 82 / 0.7);
 }
 
 .dark\:border-vds3neu700:is(.dark *) {
@@ -3866,22 +4012,24 @@ input[type='radio']:checked {
   background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-vds3neu700:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-vdp\/90:is(.dark *) {
-  background-color: rgb(24 24 27 / 0.9);
-}
-
-.dark\:bg-vdp\/80:is(.dark *) {
-  background-color: rgb(24 24 27 / 0.8);
-}
-
 .dark\:text-neutral-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-vdp:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity, 1));
 }
 
 .dark\:text-vds:is(.dark *) {
