--- a/src/components/items/itemEditor.html
+++ b/src/components/items/itemEditor.html
@@ -31,24 +31,18 @@
               x-transition:leave-end="translate-x-full"
               class="w-screen max-w-md">
               <div
-                class="flex flex-col h-full py-5 overflow-y-scroll bg-white border-l shadow-lg border-neutral-100/70">
+                class="flex flex-col h-full py-5 overflow-y-scroll bg-white border-l shadow-lg dark:bg-vdp2 border-neutral-100/70 dark:border-vds2/70">
                 <div class="px-4 sm:px-5">
                   <div class="flex items-start justify-between pb-1">
-                    <h2 class="text-base font-semibold leading-6 text-gray-900" id="slide-over-title">
-                      Add edit or remove items
+                    <h2
+                      class="flex self-center text-xl leading-6 text-center text-gray-900 dark:text-vds"
+                      id="slide-over-title">
+                      Edit & Remove items
                     </h2>
                     <div class="flex items-center h-auto ml-3">
-                      <button
-                        @click="slideOverOpen=false"
-                        class="absolute top-0 right-0 z-30 flex items-center justify-center px-3 py-2 mt-4 mr-5 space-x-1 text-xs font-medium uppercase border rounded-md border-neutral-200 text-neutral-600 hover:bg-neutral-100">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          fill="none"
-                          viewBox="0 0 24 24"
-                          stroke-width="1.5"
-                          stroke="currentColor"
-                          class="w-4 h-4">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                      <button @click="slideOverOpen=false" class="butt-style">
+                        <svg width="16" height="16" class="flex self-center mr-1.5">
+                          <use href="/public/icons/icons.svg#xmark" />
                         </svg>
                         <span>Close</span>
                       </button>
@@ -57,8 +51,206 @@
                 </div>
                 <div class="relative flex-1 px-4 mt-5 sm:px-5">
                   <div class="absolute inset-0 px-4 sm:px-5">
-                    <div
-                      class="relative h-full overflow-hidden border border-dashed rounded-md border-neutral-300"></div>
+                    <div class="relative h-full overflow-hidden rounded-md">
+                      <div
+                        x-data="{
+                          tabSelected: 1,
+                          tabId: $id('tabs'),
+                          tabButtonClicked(tabButton){
+                            this.tabSelected = tabButton.id.replace(this.tabId + '-', '');
+                            this.tabRepositionMarker(tabButton);
+                          },
+                          tabRepositionMarker(tabButton){
+                            this.$refs.tabMarker.style.width=tabButton.offsetWidth + 'px';
+                            this.$refs.tabMarker.style.height=tabButton.offsetHeight + 'px';
+                            this.$refs.tabMarker.style.left=tabButton.offsetLeft + 'px';
+                          },
+                          tabContentActive(tabContent){
+                            return this.tabSelected == tabContent.id.replace(this.tabId + '-content-', '');
+                          }
+                        }"
+                        x-init="tabRepositionMarker($refs.tabButtons.firstElementChild);"
+                        class="relative w-full max-w-sm">
+                        <div
+                          x-ref="tabButtons"
+                          class="relative inline-grid items-center justify-center w-full h-10 grid-cols-2 p-1 bg-gray-100 rounded-lg select-none text-vls3 dark:text-vdp dark:bg-vds3neu700">
+                          <button
+                            :id="$id(tabId)"
+                            @click="tabButtonClicked($el);"
+                            type="button"
+                            class="relative z-20 inline-flex items-center justify-center w-full h-8 px-3 text-sm font-medium transition-all rounded-md cursor-pointer whitespace-nowrap">
+                            Styles
+                          </button>
+                          <button
+                            :id="$id(tabId)"
+                            @click="tabButtonClicked($el);"
+                            type="button"
+                            class="relative z-20 inline-flex items-center justify-center w-full h-8 px-3 text-sm font-medium transition-all rounded-md cursor-pointer whitespace-nowrap">
+                            Samples
+                          </button>
+                          <div
+                            x-ref="tabMarker"
+                            class="absolute left-0 z-10 w-1/2 h-full duration-300 ease-out"
+                            x-cloak>
+                            <div class="w-full h-full bg-white rounded-md shadow-sm"></div>
+                          </div>
+                        </div>
+                        <div class="relative w-full mt-2 content">
+                          <div :id="$id(tabId + '-content')" x-show="tabContentActive($el)" class="relative">
+                            <!-- Tab Content 1 - Replace with your content -->
+                            <button @click="getStyles(currentClient); console.log(currentClient);">Get styles</button>
+                            <div
+                              class="p-2 border rounded-lg shadow-sm border-vls dark:border-vds/50 bg-card text-neutral-900">
+                              <div class="flex justify-between">
+                                <span class="w-2/4">Name</span>
+                                <span class="w-1/4 text-right">Price</span>
+                                <span class="w-1/4 text-right">Actions</span>
+                              </div>
+                              <hr />
+                              <template x-for="style in styles" :key="style.id">
+                                <div>
+                                  <div class="flex py-2" x-data="{editing: false}">
+                                    <!-- Preview -->
+                                    <div x-show="!editing" x-text="style.name" class="w-2/4 text-left"></div>
+                                    <div x-show="!editing" x-text="'£' + style.price" class="w-1/4 text-right"></div>
+                                    <div x-show="!editing" class="flex justify-end w-1/4 text-right">
+                                      <button
+                                        class="mr-1.5 table-interaction-icon-blue flex"
+                                        x-show="!editing"
+                                        @click="editing = true">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#pencil" />
+                                        </svg>
+                                      </button>
+                                      <button class="table-interaction-icon-red" x-show="!editing">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#trash" />
+                                        </svg>
+                                      </button>
+                                    </div>
+                                    <!-- Editing -->
+                                    <input
+                                      x-show="editing"
+                                      x-model="style.name"
+                                      :id="'style-name-' + style.id"
+                                      :name="'style-name-' + style.id"
+                                      class="w-2/4 text-left table-input-standard" />
+                                    <input
+                                      x-mask:dynamic="$money($input)"
+                                      x-show="editing"
+                                      x-model="style.price"
+                                      :id="'style-price-' + style.id"
+                                      :name="'style-price-' + style.id"
+                                      class="w-1/4 text-right table-input-standard" />
+                                    <div x-show="editing" class="flex justify-end w-1/4 text-right">
+                                      <button
+                                        class="mr-1.5 table-interaction-icon-blue"
+                                        x-show="editing"
+                                        @click="editing = false">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#check-circle" />
+                                        </svg>
+                                      </button>
+                                      <button
+                                        class="table-interaction-icon-red"
+                                        x-show="editing"
+                                        @click="editing = false">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#xmark-circle" />
+                                        </svg>
+                                      </button>
+                                    </div>
+                                  </div>
+                                  <hr />
+                                </div>
+                              </template>
+                            </div>
+                            <!-- End Tab Content 1 -->
+                          </div>
+
+                          <div :id="$id(tabId + '-content')" x-show="tabContentActive($el)" class="relative" x-cloak>
+                            <!-- Tab Content 2 - Replace with your content -->
+                            <button @click="getSamples(currentClient); console.log(currentClient);">Get samples</button>
+                            <div
+                              class="p-2 border rounded-lg shadow-sm border-vls dark:border-vds/50 bg-card text-neutral-900">
+                              <div class="flex justify-between">
+                                <span class="w-1/4">Name</span>
+                                <span class="w-1/4 text-right">Time</span>
+                                <span class="w-1/4 text-right">Price</span>
+                                <span class="w-1/4 text-right">Actions</span>
+                              </div>
+                              <hr />
+                              <template x-for="sample in samples" :key="sample.id">
+                                <div>
+                                  <div class="flex py-2" x-data="{editing: false}">
+                                    <!-- Preview -->
+                                    <div x-show="!editing" x-text="sample.name" class="w-1/4 text-left"></div>
+                                    <div x-show="!editing" x-text="'£' + sample.time" class="w-1/4 text-right"></div>
+                                    <div x-show="!editing" x-text="'£' + sample.price" class="w-1/4 text-right"></div>
+                                    <div x-show="!editing" class="flex justify-end w-1/4 text-right">
+                                      <button
+                                        class="mr-1.5 table-interaction-icon-blue flex"
+                                        x-show="!editing"
+                                        @click="editing = true">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#pencil" />
+                                        </svg>
+                                      </button>
+                                      <button class="table-interaction-icon-red" x-show="!editing">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#trash" />
+                                        </svg>
+                                      </button>
+                                    </div>
+                                    <!-- Editing -->
+                                    <input
+                                      x-show="editing"
+                                      x-model="sample.name"
+                                      :id="'sample-id-' + sample.id"
+                                      :name="'sample-name-' + sample.id"
+                                      class="w-1/4 text-left table-input-standard" />
+                                    <input
+                                      x-mask:dynamic="$money($input)"
+                                      x-show="editing"
+                                      x-model="sample.time"
+                                      :id="'sample-time-id-' + sample.id"
+                                      :name="'sample-time-' + sample.id"
+                                      class="w-1/4 text-right table-input-standard" />
+                                    <input
+                                      x-mask:dynamic="$money($input)"
+                                      x-show="editing"
+                                      x-model="sample.price"
+                                      :id="'sample-price-id-' + sample.id"
+                                      :name="'sample-price-' + sample.id"
+                                      class="w-1/4 text-right table-input-standard" />
+                                    <div x-show="editing" class="flex justify-end w-1/4 text-right">
+                                      <button
+                                        class="mr-1.5 table-interaction-icon-blue"
+                                        x-show="editing"
+                                        @click="editing = false">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#check-circle" />
+                                        </svg>
+                                      </button>
+                                      <button
+                                        class="table-interaction-icon-red"
+                                        x-show="editing"
+                                        @click="editing = false">
+                                        <svg width="18" height="18">
+                                          <use href="/public/icons/icons.svg#xmark-circle" />
+                                        </svg>
+                                      </button>
+                                    </div>
+                                  </div>
+                                  <hr />
+                                </div>
+                              </template>
+                            </div>
+                            <!-- End Tab Content 2 -->
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
